# nucleus

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  README.md  deny.toml  flake.nix
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: concurrency.rs  container_runtime.rs  context_populator.rs  resource_config.rs  seccomp_filter.rs
benches/pg18_io/: bench.sh  flake.nix  seccomp.json
benches/pg18_io/results/20260408_130410/: baremetal_io_uring_select_run1.txt  baremetal_io_uring_select_run2.txt  baremetal_io_uring_select_run3.txt  baremetal_io_uring_tpcb_run1.txt  baremetal_io_uring_tpcb_run2.txt  baremetal_io_uring_tpcb_run3.txt  baremetal_worker_select_run1.txt  baremetal_worker_select_run2.txt  baremetal_worker_select_run3.txt  baremetal_worker_tpcb_run1.txt  baremetal_worker_tpcb_run2.txt  baremetal_worker_tpcb_run3.txt
examples/: resource_limits.rs  simple_container.rs  with_context.rs
formal/tla/: NucleusSecurity_Capabilities_CapabilityDropping.tla  NucleusSecurity_Cgroups_ResourceLimiting.tla  NucleusSecurity_ContainerEscapePrevention.tla  NucleusSecurity_GVisor_GVisorRuntime.tla  NucleusSecurity_Namespaces_NamespaceIsolation.tla  NucleusSecurity_ResourceExhaustionPrevention.tla  NucleusSecurity_Seccomp_SeccompEnforcement.tla  NucleusVerification_FormalVerification_NamespaceIsolationSpec.tla  NucleusVerification_FormalVerification_ResourceLimitSpec.tla  NucleusVerification_IntegrationTests_ContainerLifecycleTest.tla  Nucleus_Filesystem_FilesystemLifecycle.tla  Nucleus_Isolation_NamespaceLifecycle.tla  Nucleus_Resources_CgroupLifecycle.tla  Nucleus_Security_SecurityEnforcement.tla  Nucleus_System.cfg  Nucleus_System.tla
intent/: patterns.intent  security.intent  system.intent  verification.intent
nix/: module.nix
nix/patches/: gvisor-runsc-real-exe-path.patch
spec/: architecture.md  filesystem.md  implementation-plan.md  resource-control.md  security.md
src/: audit.rs  error.rs  lib.rs  main.rs  telemetry.rs
src/checkpoint/: criu.rs  metadata.rs  mod.rs  state.rs
src/container/: config.rs  exec.rs  guards.rs  gvisor_setup.rs  health.rs  lifecycle.rs  mod.rs  runtime.rs  signals.rs  state.rs
src/filesystem/: attestation.rs  context.rs  lazy.rs  mod.rs  mount.rs  state.rs  tmpfs.rs
src/isolation/: attach.rs  mod.rs  namespaces.rs  state.rs  usermap.rs
src/network/: bridge.rs  config.rs  egress.rs  mod.rs  netlink.rs  netns.rs  state.rs  userspace.rs
src/oci/: mod.rs
src/resources/: cgroup.rs  limits.rs  mod.rs  state.rs  stats.rs
src/security/: capabilities.rs  caps_policy.rs  gvisor.rs  landlock.rs  landlock_policy.rs  mod.rs  oci.rs  policy.rs  seccomp.rs  seccomp_bpf.rs  seccomp_generate.rs  seccomp_trace.rs  state.rs  syscall_numbers.rs
src/topology/: config.rs  dag.rs  dns.rs  mod.rs  reconcile.rs
tests/: formal_security_spec_regression.rs  gvisor_nix_patch.rs  integration_checkpoint.rs  integration_container_config.rs  integration_filesystem.rs  integration_gvisor.rs  integration_lifecycle.rs  integration_network.rs  integration_resources.rs  integration_security.rs  model_based_filesystem.rs  model_based_gvisor.rs  model_based_isolation.rs  model_based_resources.rs  model_based_security.rs  model_based_system.rs  tla_filesystem.rs  tla_isolation.rs  tla_resources.rs  tla_security.rs  tla_system.rs
