[package]
name = "nucleus-container"
version = "0.2.1"
edition = "2021"
rust-version = "1.74"
description = "Extremely lightweight Docker alternative for agents and production services — isolated execution using cgroups, namespaces, seccomp, Landlock, and gVisor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wiggum-cc/nucleus"
homepage = "https://github.com/wiggum-cc/nucleus"
documentation = "https://docs.rs/nucleus-container"
readme = "README.md"
keywords = ["container", "isolation", "cgroups", "namespaces", "gvisor"]
categories = ["command-line-utilities", "os::linux-apis"]
exclude = [
    "formal/**",
    "intent/**",
    "spec/**",
    "nix/**",
    "flake.nix",
    "flake.lock",
    ".github/**",
    ".claude/**",
    ".envrc",
    "CONTRIBUTING.md",
    "IMPLEMENTATION_SUMMARY.md",
]

[lib]
name = "nucleus"

[[bin]]
name = "nucleus"
path = "src/main.rs"

[dependencies]
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["process", "sched", "mount", "user", "signal", "fs", "hostname"] }
libc = "0.2"
caps = "0.5"
seccompiler = "0.4"
landlock = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
toml = "0.8"
zeroize = { version = "1", features = ["zeroize_derive"] }

[dev-dependencies]
proptest = "1"
tla-connect = "0.0.4"
itf = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "context_populator"
harness = false

[[bench]]
name = "resource_config"
harness = false

[[bench]]
name = "seccomp_filter"
harness = false

[[bench]]
name = "concurrency"
harness = false

[[bench]]
name = "container_runtime"
harness = false

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/nucleus-{ target }{ archive-suffix }"
bin-dir = "nucleus-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
